# genai_agent

./: .gitignore  main.py  multi_model.ipynb  product_catalog.json  pyproject.toml  requirements.txt  resume.txt  resume_suggestion.ipynb  single_agent.ipynb
