[project]
name = "g"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.3",
    "groq>=0.37.1",
    "gtts>=2.5.4",
    "ipykernel>=7.3.0",
    "ipython>=9.14.1",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "matplotlib>=3.11.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.14.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "tavily>=1.1.0",
    "typesense>=2.0.0",
]
